--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,11 @@
             <version>${querydsl.version}</version>
         </dependency>
         <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
             <version>4.1.4</version>
