--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:hsql://localhost/xdb
+jdbc.url=jdbc:hsqldb:mam:xdb
 jdbc.username=SA
 jdbc.password=
